maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:2: error: Missing closing brace `}' assumed here
override def run() {override def run() {
^Escaper:2: error: expected start of definition
override def run() {override def run() {
         ^